<resources>
    <string name="app_name">FirstAssignment</string>
    <string name="email_label">Email :</string>
    <string name="hint_email">Enter your Email here :</string>
    <string name="password_label">Password :</string>
    <string name="hint_password">Enter your Password here :</string>
    <string name="gender_label">Gender :</string>
    <string name="spinner_prompt">Select your Gender </string>
    <string name="submit">Submit :</string>
    <string name="toast_message">You submitted: %1$s, %2$s, %3$s</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


</resources>