<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <!-- Email Label -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:layout_marginTop="32dp"/>

    <!-- Email EditText -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/emailLabel"
        android:layout_alignBaseline="@id/emailLabel"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <!-- Password Label -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/passwordLabel"
        android:layout_alignBaseline="@id/passwordLabel"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <!-- Gender Label -->
    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_label"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp"/>

    <!-- Gender Spinner -->
    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/genderLabel"
        android:layout_alignBaseline="@id/genderLabel"
        android:layout_marginStart="16dp"
        android:prompt="@string/spinner_prompt"/>

    <!-- Submit Button -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/submit"/>
</RelativeLayout>
